# Gate

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SPONSORS.md  SUPPORTED_VERSIONS.md  cspell.json  docker-compose.yml  package.json
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: discovery.rs  domain_center.rs  lib.rs  main.rs  project.rs  runtime.rs  tunnel_performance.rs
client/src-tauri/src/commands/: backup.rs  certificate.rs  config.rs  connection.rs  diagnostics.rs  discovery.rs  domain.rs  error.rs  mod.rs  project.rs  runtime.rs  server.rs  tunnel.rs
client/src-tauri/src/config/: mod.rs
client/src-tauri/src/native/: mod.rs  platform.rs
client/src-tauri/src/tray/: mod.rs
client/src-tauri/src/updater/: mod.rs
client/src-tauri/src/utils/: mod.rs
client/src-tauri/src/windows/: mod.rs  service.rs
crates/communication/: Cargo.toml
crates/communication/src/: lib.rs
crates/communication/src/client/: mod.rs
crates/communication/src/connection/: mod.rs
crates/communication/src/dispatcher/: mod.rs
crates/communication/src/error/: mod.rs
crates/communication/src/event/: mod.rs
crates/communication/src/handler/: mod.rs
crates/communication/src/metrics/: mod.rs
crates/communication/src/mock/: mod.rs
crates/communication/src/queue/: mod.rs
crates/communication/src/reconnect/: mod.rs
crates/communication/src/request/: mod.rs
crates/communication/src/router/: mod.rs
crates/communication/src/server/: mod.rs
crates/communication/src/session/: mod.rs
crates/communication/src/shared/: logging.rs  mod.rs
crates/communication/src/timeout/: mod.rs
crates/communication/src/transport/: mod.rs
crates/communication/tests/: communication_layer.rs
crates/communication/tests/communication_tests/: README.md
crates/communication/tests/fixtures/: README.md
crates/communication/tests/integration/: README.md
crates/communication/tests/mock/: README.md
crates/communication/tests/unit/: README.md
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  repositories.rs
crates/domain/src/modules/: mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/config/: mod.rs
crates/engine/src/connection/: mod.rs
crates/engine/src/connection_monitor/: mod.rs
crates/engine/src/core/: builder.rs  config.rs  context.rs  lifecycle.rs  manager.rs  mod.rs  state.rs  tunnel.rs  tunnel_engine.rs
crates/engine/src/error/: mod.rs
crates/engine/src/event/: mod.rs
crates/engine/src/forwarder/: mod.rs
crates/engine/src/health/: mod.rs
crates/engine/src/heartbeat/: mod.rs
crates/engine/src/listener/: mod.rs
crates/engine/src/mock/: mod.rs
crates/engine/src/pipeline/: mod.rs
crates/engine/src/reconnect/: mod.rs
crates/engine/src/repository/: mod.rs
crates/engine/src/router/: mod.rs
crates/engine/src/runtime/: config.rs  context.rs  error.rs  https.rs  lifecycle.rs  manager.rs  mod.rs  state.rs  tunnel_runtime.rs
crates/engine/src/session/: mod.rs
crates/engine/src/session_recovery/: mod.rs
crates/engine/src/state_sync/: mod.rs
crates/engine/src/statistics/: mod.rs
crates/engine/src/transport/: mod.rs
crates/engine/tests/: heartbeat.rs  integration.rs  mock.rs  network.rs  reconnect.rs  runtime.rs  stress.rs
crates/engine/tests/benchmark/: README.md
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/tests/: codec_tests.rs  packet_tests.rs  protocol_tests.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
integration/: Cargo.toml
integration/e2e/: RealWorldTunnelValidationReport.md  phase3_real_world_validation.rs
integration/src/: client.rs  communication.rs  lib.rs  performance.rs  protocol.rs  runtime.rs  server.rs
integration/tests/: authentication_test.rs  client_connect_test.rs  forward_test.rs  heartbeat_test.rs  performance_simulation_test.rs  reconnect_test.rs  shutdown_test.rs  statistics_test.rs  tunnel_test.rs
server/: Cargo.toml
server/acme/src/: client.rs  mod.rs  provider.rs  state.rs
server/cert_store/src/: file_store.rs  mod.rs  store.rs
server/certificate/src/: manager.rs  mod.rs  model.rs  parser.rs  validator.rs
server/crypto/src/: fingerprint.rs  mod.rs
server/domain/: Cargo.toml  README.md  mod.rs
server/domain/config/: mod.rs
server/domain/docs/: architecture.md  host-resolve-flow.md  lifecycle.md  repository-structure.md  rustdoc.md  service-dependency.md  trait-relationships.md
server/domain/error/: mod.rs
server/domain/event/: mod.rs
server/domain/examples/: bind_tunnel.rs  create_domain.rs  memory_repository.rs  resolve_host.rs  validate_domain.rs
server/domain/model/: domain.rs  host.rs  id.rs  mod.rs  record.rs  status.rs
server/domain/repository/: mod.rs
server/domain/resolver/: dns.rs  host.rs  mod.rs
server/domain/service/: mod.rs
server/domain/storage/: mod.rs
server/domain/tests/: error_tests.rs  mod.rs  model_tests.rs  repository_tests.rs  resolver_tests.rs  service_tests.rs  storage_tests.rs  validator_tests.rs
server/domain/traits/: mod.rs
server/domain/validator/: mod.rs
server/renew/src/: mod.rs  scheduler.rs
server/src/: bootstrap.rs  discovery.rs  gateway.rs  lib.rs  logging.rs  main.rs  runtime.rs
server/tls/: Cargo.toml
server/tls/docs/: tls_infrastructure.md
server/tls/src/: config.rs  error.rs  lib.rs  provider.rs
server/tls/tests/: certificate_parse.rs  certificate_store.rs  certificate_validate.rs  renew_scheduler.rs
shared/: Cargo.toml
shared/src/: config.rs  context.rs  error.rs  event.rs  health.rs  lib.rs  lifecycle.rs  logging.rs  process.rs  scheduler.rs
shared/tests/: config_center.rs
(+991 files in other folders)
