[workspace]
resolver = "2"
members = [
    "client/src-tauri",
    "crates/server",
    "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gate Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
parking_lot = "0.12"
dashmap = "6"
futures = "0.3"
