[workspace]
resolver = "2"
members = [
    "client/src-tauri",
    "server",
    "shared",
    "crates/domain",
    "crates/application",
    "crates/engine",
    "crates/infrastructure",
    "crates/protocol",
    "crates/transport",
]
default-members = [
    "server",
    "shared",
    "crates/domain",
    "crates/application",
    "crates/engine",
    "crates/infrastructure",
    "crates/protocol",
    "crates/transport",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gate Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
axum = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
config = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
parking_lot = "0.12"
dashmap = "6"
futures = "0.3"
