[package]
name = "gate-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gate Alpha V1 integration harness and tests"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gate-communication = { path = "../crates/communication" }
gate-engine = { path = "../crates/engine" }
gate-protocol = { path = "../crates/protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
