[package]
name = "gate-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gate server bootstrap crate"

[dependencies]
gate-application = { path = "../crates/application" }
gate-domain = { path = "../crates/domain" }
gate-engine = { path = "../crates/engine" }
gate-infrastructure = { path = "../crates/infrastructure" }
gate-protocol = { path = "../crates/protocol" }
gate-server-domain = { path = "domain" }
gate-server-tls = { path = "tls" }
gate-shared = { path = "../shared" }
gate-transport = { path = "../crates/transport" }
anyhow.workspace = true
async-trait = "0.1"
chrono.workspace = true
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-pemfile = "2"
serde_json.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
tracing.workspace = true
tracing-subscriber.workspace = true
local-ip-address = "0.6"
uuid.workspace = true

[dev-dependencies]
rcgen = "0.12"
tempfile.workspace = true
