[package]
name = "gate-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gate shared kernel"

[dependencies]
config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
