[package]
name = "gate-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gate client - A modern, lightweight NAT traversal client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sysinfo.workspace = true
gate-shared = { path = "../../shared" }
gate-domain = { path = "../../crates/domain" }
gate-communication = { path = "../../crates/communication" }
gate-protocol = { path = "../../crates/protocol" }
gate-engine = { path = "../../crates/engine" }
gate-server-domain = { path = "../../server/domain" }

[dev-dependencies]
tempfile.workspace = true
