[package]
name = "gate-communication"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gate client-server communication layer"

[dependencies]
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
gate-protocol = { path = "../protocol" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
