[package]
name = "gate-communication"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gate client-server communication layer"

[dependencies]
futures.workspace = true
gate-protocol = { path = "../protocol" }
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
