[package]
name = "gate-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gate tunnel engine core architecture"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
