[package]
name = "gate-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gate tunnel engine core architecture"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
gate-server-tls = { path = "../../server/tls" }
parking_lot.workspace = true
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-pemfile = "2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
rcgen = "0.12"
