[package]
name = "gate-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gate client-server protocol layer"

[dependencies]
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
