[package]
name = "gate-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gate shared library - Common types, protocol, and utilities"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
