[package]
name = "gate-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gate transport port definitions"

[dependencies]
gate-application = { path = "../application" }
gate-shared = { path = "../../shared" }
axum.workspace = true
tower.workspace = true
thiserror.workspace = true
