[package]
name = "gate-server-tls"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Independent TLS, certificate, ACME, and renewal infrastructure for Gate server"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
pem = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
x509-parser = "0.16"

[dev-dependencies]
rcgen = "0.12"
tempfile = "3"
