[package]
name = "gate-server-tls"
version = "0.9.2"
edition.workspace = true
license.workspace = true
description = "Independent TLS, certificate, ACME, and renewal infrastructure for Gate server"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
instant-acme = { version = "0.8.5", default-features = false, features = ["hyper-rustls", "ring", "rcgen"] }
pem = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
x509-parser = "0.16"

[dev-dependencies]
rcgen = "0.12"
tempfile = "3"
tokio = { workspace = true }
